# cihai-cli

./: .gitignore  .tmuxp.yaml  .tool-versions  .travis.yml  AGENTS.md  CHANGES  LICENSE  MANIFEST.in  MIGRATION  Makefile  Pipfile  README.md  README.rst  conftest.py  justfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  docs.yml  tests.yml
cihai_cli/: __about__.py  cli.py
doc/: Makefile  conf.py  index.rst  usage.rst
doc/_templates/: more.html  star.html
docs/: AGENTS.md  Makefile  api.md  api.rst  cli.md  cli.rst  conf.py  index.md  index.rst  justfile  quickstart.md  redirects.txt  usage.md
docs/_ext/: __init__.py  argparse_exemplar.py  cihai_install.py
docs/_ext/sphinx_argparse_neo/: compat.py  directive.py  utils.py
docs/_widgets/cihai-install/: widget.css  widget.js
docs/cli/: completion.md  index.md  info.md  reverse.md
docs/project/: architecture.md  code-style.md  contributing.md  index.md  releasing.md
requirements/: base.txt  dev.txt  doc.txt
src/cihai_cli/: __about__.py  __init__.py  _colors.py  _formatter.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_docs_examples.py  test_install_widget.py
tests/docs/: __init__.py
tests/docs/_ext/: test_argparse_exemplar.py  test_argparse_roles.py
tests/docs/_ext/sphinx_argparse_neo/: test_nodes.py  test_renderer.py
tests/fixtures/: test_config.yml
